[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/art/enemies/dino_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/art/enemies/dino_run.png" type="Texture" id=2]
[ext_resource path="res://src/EnemyDinosaur.gd" type="Script" id=3]
[ext_resource path="res://assets/art/enemies/dino_dead.png" type="Texture" id=4]
[ext_resource path="res://assets/art/items/item_shadow.png" type="Texture" id=5]
[ext_resource path="res://scenes/enemies/EnemyHealthbar.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/art/enemies/alert.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/alert.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/art/enemies/dino_crouch.png" type="Texture" id=9]
[ext_resource path="res://assets/art/enemies/dino_leap.png" type="Texture" id=10]
[ext_resource path="res://assets/art/enemies/dino_land.png" type="Texture" id=11]
[ext_resource path="res://assets/art/enemies/dust.png" type="Texture" id=12]
[ext_resource path="res://src/HitboxScript.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 72, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 72, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 72, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 72, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 72, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 72, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 72, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 504, 0, 72, 48 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "dead",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "land",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "leap",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 14.0
} ]

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 32, 20 )

[sub_resource type="CircleShape2D" id=14]
radius = 120.0

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 36, 21 )

[sub_resource type="Animation" id=15]
resource_name = "leap"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -12, -12 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1 ), Vector2( 1.5, 1 ), Vector2( 1.1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.880851, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 8, 1, 1 )
flag_disable_z = true
gravity = Vector3( 8, 0, 0 )
initial_velocity = 50.35
initial_velocity_random = 0.27
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -200.0
angle = 25.0
angle_random = 0.15
scale = 1.25
scale_random = 1.0
color_ramp = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=19]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -200.0
angle = 80.0
scale = 1.25
scale_random = 0.15
color_ramp = SubResource( 18 )

[node name="EnemyDinosaur" type="KinematicBody2D"]
collision_layer = 1025
collision_mask = 1025
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 4, -16 )
scale = Vector2( 3, 2 )
texture = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -48, -40 )
frames = SubResource( 10 )
animation = "idle"
centered = false

[node name="Alert" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -56 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2( 0, -16 )
width = 2.0

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 0, -16 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 12 )

[node name="KnockbackTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackLength" type="Timer" parent="."]
wait_time = 0.34
one_shot = true

[node name="RecoveryLength" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BoredomTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemyHealthbar" parent="." instance=ExtResource( 6 )]
position = Vector2( -32, 8 )

[node name="AlertRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="Range" type="CollisionShape2D" parent="AlertRange"]
shape = SubResource( 14 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048
script = ExtResource( 13 )
damage_min = 5
damage_max = 6
knockback_power = 300
knockback_length = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -4, -19 )
shape = SubResource( 20 )

[node name="AlertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="Anims" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/leap = SubResource( 15 )

[node name="DustParticles" type="Particles2D" parent="."]
scale = Vector2( 2, 2 )
emitting = false
amount = 7
lifetime = 0.6
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 16 )
texture = ExtResource( 12 )

[node name="DustParticles2" type="Particles2D" parent="."]
scale = Vector2( 2, 2 )
emitting = false
amount = 7
lifetime = 0.6
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 19 )
texture = ExtResource( 12 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hit"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_over"]
[connection signal="timeout" from="AttackTimer" to="." method="_attack"]
[connection signal="timeout" from="AttackLength" to="." method="_attack_over"]
[connection signal="timeout" from="RecoveryLength" to="." method="_on_recover"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_cooldown_over"]
[connection signal="timeout" from="BoredomTimer" to="." method="_on_boredom"]
[connection signal="area_entered" from="AlertRange" to="." method="_on_alert"]
[connection signal="area_exited" from="AlertRange" to="." method="_on_unalert"]
[connection signal="finished" from="AlertSound" to="." method="_on_sound_over"]
